# cmake-test

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
conan-config/Default/profiles/: ergonomic-cpp-debug  ergonomic-cpp-release
conan-config/Mac/profiles/: ergonomic-cpp-debug  ergonomic-cpp-release
conan-config/Windows/profiles/: ergonomic-cpp-debug  ergonomic-cpp-release
src/App/: main.cpp
src/BuildSystem/: build.ps1
